fix alignment & padding

--- a/src/theme.less
+++ b/src/theme.less
@@ -134,7 +134,7 @@ pre code {
   box-shadow: inset 0 1px 0 rgba(205,191,227,0.3);
 }
 
-.nav-item {
+.nav-link {
   text-align: left;
 }
 
@@ -527,6 +527,7 @@ input {
 
   .nav>li>a {
       padding: 10px 15px 10px 0;
+      text-align: left;
   }
 }
 
@@ -657,8 +658,11 @@ a.btn-outline-default,
 }
 
 @media (max-width: 480px) {
-  .nav-link {
-    text-align: center;
+  .well {
+    .nav>li>a {
+      text-align: center;
+      padding: 10px 15px;
+    }
   }
 }
 
